# dopeIPTV

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  FEATURES.md  README.md  RELEASE_NOTES.md  SECURITY.md  dopeiptv-mac.spec  dopeiptv-win.spec  dopeiptv.desktop  dopeiptv.py  dopeiptv.spec  install.sh  pyproject.toml  requirements.txt  swiptv.desktop  swiptv.py  sync-releases.php
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  translation_fix.yml
.github/workflows/: ci.yml  release.yml
deploy/: content-iptv.dope.rs.conf
docs/: ARCHITECTURE.md  BUG-nvidia-open-render-subtitles.md  DEVELOPER_NOTES.md  FEATURES.md  THIRD-PARTY-LICENSES.md  TRANSLATING.md  WINDOWS-PORT.md
docs/screenshots/: README.md
dopeiptv/: __init__.py  _tmdb_key.py.example  app.py  channel_list.py  chromecast.py  client.py  dialogs.py  embedded.py  epg.py  i18n.py  main_window.py  metadata.py  mw_context.py  mw_detail.py  mw_recording.py  mw_settings.py  mw_trakt.py  platform_macos.py  players.py  recording.py  stores.py  theme.py  tmdb_match.py  trakt.py  wakelock.py  widgets.py  workers.py
dopeiptv/core/: __init__.py  _alloc.py  _lazy_requests.py  log.py  platform_macos.py  platform_windows.py  player_exec.py  recording.py  stores.py  updates.py  wakelock.py  workers.py
dopeiptv/locale/: README.md  ar.json  de.json  el.json  es.json  fa.json  fr.json  he.json  hi.json  hr.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sr.json  sv.json  sw.json  th.json  tr.json  uk.json  ur.json  vi.json  zh.json
dopeiptv/media/: __init__.py  embedded.py  players.py  vlc_embedded.py
dopeiptv/providers/: __init__.py  chromecast.py  client.py  diagnostics.py  epg.py  metadata.py  oauth_loopback.py  trakt.py
dopeiptv/services/: __init__.py  coverart.py  reminders.py  resume.py
dopeiptv/ui/: __init__.py  channel_list.py  dialogs.py  epg_grid.py  epg_search.py  main_window.py  mw_busy.py  mw_context.py  mw_detail.py  mw_home.py  mw_multiview.py  mw_nav.py  mw_onboarding.py  mw_popout.py  mw_recording.py  mw_reminders.py  mw_search.py  mw_settings.py  mw_shortcuts.py  mw_sidebar.py  mw_sort.py  mw_trakt.py  mw_updates.py  reminders.py  shortcuts.py  theme.py  tmdb_match.py  welcome.py  widgets.py
packaging/: WINDOWS-README.txt  gen_icon.py  gen_iconset.py  io.github.slimture.dopeIPTV.desktop  io.github.slimture.dopeIPTV.metainfo.xml
packaging/flatpak/: FLATHUB.md  io.github.slimture.dopeIPTV.yaml
public/: app.js  dl.php  i18n.php  index.php  llms.txt  site.webmanifest  sitemap.xml  style.css
public/lang/: ar.php  de.php  el.php  en.php  es.php  fa.php  fr.php  he.php  hi.php  hr.php  id.php  it.php  ja.php  ko.php  nl.php  pl.php  pt.php  ru.php  sr.php  sv.php  sw.php  th.php  tr.php  uk.php  ur.php  vi.php  zh.php
tests/: test_alloc.py  test_autoplay_next.py  test_client.py  test_cover_flow.py  test_coverart.py  test_diagnostics.py  test_embedded.py  test_epg.py  test_epg_grid.py  test_home.py  test_i18n.py  test_imports.py  test_lazy_imports.py  test_list_perf.py  test_m3u_client.py  test_memory.py  test_multiview.py  test_offline_client.py  test_popout.py  test_recording.py  test_reminders.py  test_resume.py  test_robustness.py  test_settings_wheel.py  test_sidebar_fs.py  test_stores.py  test_stress.py  test_theme.py  test_trakt_oauth.py  test_updates.py  test_version.py  test_welcome.py
tools/: airplay_probe.py  hwdec_sub_test.py  i18n_locale_template.py  i18n_status.py
website/: README.md  sync-releases.php
website/deploy/: content-iptv.dope.rs.conf  csp.snippet.txt  proxy-iptv.dope.rs.conf
website/public/: app.js  index.php  releases.json  robots.txt  sitemap.xml  style.css
website/public/files/: .gitignore
