[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dopeiptv"
# MUST stay in lock-step with dopeiptv/__init__.py's __version__. A test
# (tests/test_version.py) fails the build if they drift, so a release can't
# ship an sdist named after the wrong version again. Bump BOTH on a release.
version = "0.7.2"
description = "Modern IPTV player"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    "PyQt6>=6.5",
    "requests>=2.28",
    "python-mpv>=1.0",
    "pychromecast>=13.0",
]

[project.scripts]
dopeiptv = "dopeiptv.app:main"

[tool.setuptools.packages.find]
include = ["dopeiptv*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# High-signal defaults only: pyflakes (F) catches undefined names, unused
# imports/variables and the like, plus E9 syntax errors. E402/E731/E741 are
# pre-existing, deliberate choices (ordered platform-bootstrap imports in
# app.py/mw_settings.py, a couple of tiny lambdas), so they're ignored to keep
# the gate green and focused on real problems. Tighten (add B, I, ...) later.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "E731", "E741"]
