[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dopeiptv"
# MUST stay in lock-step with dopeiptv/__init__.py's __version__. A test
# (tests/test_version.py) fails the build if they drift, so a release can't
# ship an sdist named after the wrong version again. Bump BOTH on a release.
version = "0.7.2"
description = "Modern IPTV player"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    "PyQt6>=6.5",
    "requests>=2.28",
    "python-mpv>=1.0",
    "pychromecast>=13.0",
]

[project.scripts]
dopeiptv = "dopeiptv.app:main"

[tool.setuptools.packages.find]
include = ["dopeiptv*"]

[tool.pytest.ini_options]
# Only collect the real test suite. Without this, pytest also discovers
# tools/hwdec_sub_test.py (it matches *_test.py) and tries to import it - that
# script does `import mpv` at module load, which fails where libmpv isn't
# installed (e.g. the CI runner), erroring collection before any test runs.
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# High-signal rules: pyflakes (F) for undefined names / unused imports, E9
# syntax, flake8-bugbear (B) for real bug patterns (loop-var closures, zip
# length mismatch, ...), and flake8-comprehensions (C4).
# Ignored, all deliberate / idiomatic here:
#   E402  - ordered platform-bootstrap imports (app.py, mw_settings.py)
#   E731  - a couple of tiny lambdas
#   E741  - one 'l' loop var
#   B008  - function call in a default argument. In a Qt/callback codebase this
#           is idiomatic and safe: QModelIndex() defaults, and the recommended
#           `tid=t.get("id")` pattern that binds a loop var into a lambda (the
#           very fix bugbear's own B023 asks for).
select = ["E4", "E7", "E9", "F", "B", "C4"]
ignore = ["E402", "E731", "E741", "B008"]
