[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dopeiptv"
# MUST stay in lock-step with dopeiptv/__init__.py's __version__. A test
# (tests/test_version.py) fails the build if they drift, so a release can't
# ship an sdist named after the wrong version again. Bump BOTH on a release.
version = "1.0.0"
description = "Modern IPTV player"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    # Lower bounds = the oldest tested; upper bounds guard against a future
    # major release changing an API out from under a build without a deliberate
    # bump here (reproducible-ish builds without a full lockfile to maintain).
    "PyQt6>=6.5,<7",
    "requests>=2.28,<3",
    "python-mpv>=1.0,<2",
    "pychromecast>=13.0,<15",
]

[project.scripts]
dopeiptv = "dopeiptv.app:main"

[tool.setuptools.packages.find]
include = ["dopeiptv*"]

[tool.setuptools.package-data]
# Ship the add-on locale JSONs (Turkish, Portuguese, Arabic, …) inside the
# wheel/sdist; i18n.py loads them at import from dopeiptv/locale/.
dopeiptv = ["locale/*.json"]

[tool.mypy]
# Type gate scoped to the pure-logic layer (data, network, services) — the
# highest-value, most-tested code. The Qt-heavy UI is deliberately NOT gated:
# main_window.py is assembled from many mw_* mixins that reference shared
# `self.<attr>` defined across sibling mixins, which mypy (seeing each class in
# isolation) reports as ~1200 false `attr-defined` errors; plus PyQt6's stubs
# mark most accessors Optional, producing union-attr/call-overload noise that
# would need a wall of asserts and `# type: ignore` to silence. Gating those
# would lower signal, not raise it. follow_imports=silent resolves imported
# modules for types without reporting their own errors, so this stays scoped.
# Expand `files` as more pure-logic modules get typed.
python_version = "3.11"
ignore_missing_imports = true
# Untyped third-party libs (requests, PyQt6, python-mpv, ...) become Any rather
# than erroring, so the gate is deterministic without pinning stub packages -
# our own code is still fully checked.
disable_error_code = ["import-untyped"]
follow_imports = "silent"
files = [
    "dopeiptv/providers/client.py",
    "dopeiptv/providers/epg.py",
    "dopeiptv/providers/metadata.py",
    "dopeiptv/providers/diagnostics.py",
    "dopeiptv/providers/oauth_loopback.py",
    "dopeiptv/core/stores.py",
    "dopeiptv/core/updates.py",
    "dopeiptv/core/log.py",
    "dopeiptv/core/player_exec.py",
    "dopeiptv/core/wakelock.py",
    "dopeiptv/services/resume.py",
    "dopeiptv/services/coverart.py",
    "dopeiptv/services/reminders.py",
]

[tool.pytest.ini_options]
# Only collect the real test suite. Without this, pytest also discovers
# tools/hwdec_sub_test.py (it matches *_test.py) and tries to import it - that
# script does `import mpv` at module load, which fails where libmpv isn't
# installed (e.g. the CI runner), erroring collection before any test runs.
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# High-signal rules: pyflakes (F) for undefined names / unused imports, E9
# syntax, flake8-bugbear (B) for real bug patterns (loop-var closures, zip
# length mismatch, ...), and flake8-comprehensions (C4).
# Ignored, all deliberate / idiomatic here:
#   E402  - ordered platform-bootstrap imports (app.py, mw_settings.py)
#   E731  - a couple of tiny lambdas
#   E741  - one 'l' loop var
#   B008  - function call in a default argument. In a Qt/callback codebase this
#           is idiomatic and safe: QModelIndex() defaults, and the recommended
#           `tid=t.get("id")` pattern that binds a loop var into a lambda (the
#           very fix bugbear's own B023 asks for).
select = ["E4", "E7", "E9", "F", "B", "C4"]
ignore = ["E402", "E731", "E741", "B008"]
